fix nav & margins on small screens

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -115,15 +115,13 @@ $navbar-light-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3
 // Maxx 900px body width, auto horizontal margins
 body {
 	width: 100%; 
-	margin-right: auto;
-	margin-left: auto;
+	margin: 0 auto !important;
 }
 
 @media (min-width: 960px) {
 	body {
 		max-width: 900px;
-		margin-right: auto !important;
-		margin-left: auto !important;
+		margin: 0 auto !important;
 	}
 }
 
